--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = setuptools
-version = 65.5.0
+version = 65.5.0+sp1
 author = Python Packaging Authority
 author_email = distutils-sig@python.org
 description = Easily download, build, install, upgrade, and uninstall Python packages
@@ -65,13 +65,14 @@ testing =
 	wheel
 	pip>=19.1 # For proper file:// URLs support.
 	jaraco.envs>=2.2
-	pytest-xdist
+	pytest-xdist < 3.0.2
 	jaraco.path>=3.2.0
 	build[virtualenv]
 	filelock>=3.4.0
 	pip_run>=8.8
 	ini2toml[lite]>=0.9
 	tomli-w>=1.0.0
+	pytest-timeout
 
 testing-integration =
 	pytest
